src/main/java/grammar/SimpleGParser.java
// Generated from C:/Users/pro/IdeaProjects/ExperimentGrammar/src/main/java\SimpleG.g4 by ANTLR 4.8
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleGParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, PRINTLN=3, PRINT=4, COMMENTSIGN=5, NONMUTABLE=6, ADD=7, 
		MINUS=8, DIV=9, MUL=10, THEN=11, LESSTHAN=12, MORETHAN=13, EQUALS=14, 
		DOUBLEDOTKEYWORDFORLOOP=15, DOKEYWORDFORLOOP=16, STRINGIDENT=17, NUMIDENT=18, 
		STRINGCHARACTER=19, FORIDENT=20, IF=21, ENDSTATEMENT=22, STARTBRACKET=23, 
		ENDBRACKET=24, ID=25, INT=26, SINGLESPACE=27, EQUALSIGN=28, NEWLINE2=29, 
		WS=30, SPACE=31, ARRSTART=32, ARREND=33, COMMA=34;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_block = 2, RULE_sysfunc = 3, RULE_assignment = 4, 
		RULE_forloop = 5, RULE_ifstat = 6, RULE_expr = 7, RULE_conditon = 8, RULE_arrvalue = 9, 
		RULE_comment = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stat", "block", "sysfunc", "assignment", "forloop", "ifstat", 
			"expr", "conditon", "arrvalue", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'println'", "'print'", "'#'", "':'", "'+'", "'-'", 
			"'/'", "'*'", "'then'", "'<'", "'>'", "'=='", "'..'", "'do'", "'string'", 
			"'num'", "'\"'", "'for'", "'if'", "';'", "'{'", "'}'", null, null, null, 
			"'='", null, null, null, "'['", "']'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "PRINTLN", "PRINT", "COMMENTSIGN", "NONMUTABLE", "ADD", 
			"MINUS", "DIV", "MUL", "THEN", "LESSTHAN", "MORETHAN", "EQUALS", "DOUBLEDOTKEYWORDFORLOOP", 
			"DOKEYWORDFORLOOP", "STRINGIDENT", "NUMIDENT", "STRINGCHARACTER", "FORIDENT", 
			"IF", "ENDSTATEMENT", "STARTBRACKET", "ENDBRACKET", "ID", "INT", "SINGLESPACE", 
			"EQUALSIGN", "NEWLINE2", "WS", "SPACE", "ARRSTART", "ARREND", "COMMA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleG.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			stat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(24);
				block();
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINTLN) | (1L << PRINT) | (1L << STRINGIDENT) | (1L << NUMIDENT) | (1L << FORIDENT) | (1L << IF) | (1L << ID) | (1L << INT) | (1L << SINGLESPACE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public ForloopContext forloop() {
			return getRuleContext(ForloopContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(SimpleGParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(SimpleGParser.SINGLESPACE, i);
		}
		public SysfuncContext sysfunc() {
			return getRuleContext(SysfuncContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			int _alt;
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				forloop();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				ifstat();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(31);
				expr(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(32);
				assignment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(34); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(33);
						match(SINGLESPACE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(36); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(38);
				sysfunc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SysfuncContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(SimpleGParser.PRINT, 0); }
		public List<TerminalNode> STRINGCHARACTER() { return getTokens(SimpleGParser.STRINGCHARACTER); }
		public TerminalNode STRINGCHARACTER(int i) {
			return getToken(SimpleGParser.STRINGCHARACTER, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PRINTLN() { return getToken(SimpleGParser.PRINTLN, 0); }
		public SysfuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sysfunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterSysfunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitSysfunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitSysfunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SysfuncContext sysfunc() throws RecognitionException {
		SysfuncContext _localctx = new SysfuncContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sysfunc);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PRINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				match(PRINT);
				setState(42);
				match(T__0);
				setState(43);
				match(STRINGCHARACTER);
				setState(44);
				expr(0);
				setState(45);
				match(STRINGCHARACTER);
				setState(46);
				match(T__1);
				}
				break;
			case PRINTLN:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				match(PRINTLN);
				setState(49);
				match(T__0);
				setState(50);
				match(STRINGCHARACTER);
				setState(51);
				expr(0);
				setState(52);
				match(STRINGCHARACTER);
				setState(53);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignmutableContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(SimpleGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleGParser.EQUALSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmutableContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterAssignmutable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitAssignmutable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitAssignmutable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssigndigitsnonmutableContext extends AssignmentContext {
		public TerminalNode NUMIDENT() { return getToken(SimpleGParser.NUMIDENT, 0); }
		public TerminalNode SINGLESPACE() { return getToken(SimpleGParser.SINGLESPACE, 0); }
		public TerminalNode ID() { return getToken(SimpleGParser.ID, 0); }
		public TerminalNode NONMUTABLE() { return getToken(SimpleGParser.NONMUTABLE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssigndigitsnonmutableContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterAssigndigitsnonmutable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitAssigndigitsnonmutable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitAssigndigitsnonmutable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssigndigitsmutablesingletypeContext extends AssignmentContext {
		public TerminalNode NUMIDENT() { return getToken(SimpleGParser.NUMIDENT, 0); }
		public TerminalNode SINGLESPACE() { return getToken(SimpleGParser.SINGLESPACE, 0); }
		public TerminalNode ID() { return getToken(SimpleGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleGParser.EQUALSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssigndigitsmutablesingletypeContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterAssigndigitsmutablesingletype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitAssigndigitsmutablesingletype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitAssigndigitsmutablesingletype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArraymutableassignContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(SimpleGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleGParser.EQUALSIGN, 0); }
		public TerminalNode ARRSTART() { return getToken(SimpleGParser.ARRSTART, 0); }
		public TerminalNode ARREND() { return getToken(SimpleGParser.ARREND, 0); }
		public List<ArrvalueContext> arrvalue() {
			return getRuleContexts(ArrvalueContext.class);
		}
		public ArrvalueContext arrvalue(int i) {
			return getRuleContext(ArrvalueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpleGParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleGParser.COMMA, i);
		}
		public ArraymutableassignContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterArraymutableassign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitArraymutableassign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitArraymutableassign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignstringnonmutableContext extends AssignmentContext {
		public TerminalNode STRINGIDENT() { return getToken(SimpleGParser.STRINGIDENT, 0); }
		public TerminalNode SINGLESPACE() { return getToken(SimpleGParser.SINGLESPACE, 0); }
		public TerminalNode ID() { return getToken(SimpleGParser.ID, 0); }
		public TerminalNode NONMUTABLE() { return getToken(SimpleGParser.NONMUTABLE, 0); }
		public List<TerminalNode> STRINGCHARACTER() { return getTokens(SimpleGParser.STRINGCHARACTER); }
		public TerminalNode STRINGCHARACTER(int i) {
			return getToken(SimpleGParser.STRINGCHARACTER, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignstringnonmutableContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterAssignstringnonmutable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitAssignstringnonmutable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitAssignstringnonmutable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArraynonmutableassignContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(SimpleGParser.ID, 0); }
		public TerminalNode NONMUTABLE() { return getToken(SimpleGParser.NONMUTABLE, 0); }
		public TerminalNode ARRSTART() { return getToken(SimpleGParser.ARRSTART, 0); }
		public TerminalNode ARREND() { return getToken(SimpleGParser.ARREND, 0); }
		public List<ArrvalueContext> arrvalue() {
			return getRuleContexts(ArrvalueContext.class);
		}
		public ArrvalueContext arrvalue(int i) {
			return getRuleContext(ArrvalueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpleGParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleGParser.COMMA, i);
		}
		public ArraynonmutableassignContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterArraynonmutableassign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitArraynonmutableassign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitArraynonmutableassign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignstringmutablesingletypeContext extends AssignmentContext {
		public TerminalNode STRINGIDENT() { return getToken(SimpleGParser.STRINGIDENT, 0); }
		public TerminalNode SINGLESPACE() { return getToken(SimpleGParser.SINGLESPACE, 0); }
		public TerminalNode ID() { return getToken(SimpleGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleGParser.EQUALSIGN, 0); }
		public List<TerminalNode> STRINGCHARACTER() { return getTokens(SimpleGParser.STRINGCHARACTER); }
		public TerminalNode STRINGCHARACTER(int i) {
			return getToken(SimpleGParser.STRINGCHARACTER, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignstringmutablesingletypeContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterAssignstringmutablesingletype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitAssignstringmutablesingletype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitAssignstringmutablesingletype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignstringmutablechangetypeContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(SimpleGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleGParser.EQUALSIGN, 0); }
		public List<TerminalNode> STRINGCHARACTER() { return getTokens(SimpleGParser.STRINGCHARACTER); }
		public TerminalNode STRINGCHARACTER(int i) {
			return getToken(SimpleGParser.STRINGCHARACTER, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignstringmutablechangetypeContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterAssignstringmutablechangetype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitAssignstringmutablechangetype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitAssignstringmutablechangetype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssigntextnonmutableContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(SimpleGParser.ID, 0); }
		public TerminalNode NONMUTABLE() { return getToken(SimpleGParser.NONMUTABLE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssigntextnonmutableContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).enterAssigntextnonmutable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleGListener ) ((SimpleGListener)listener).exitAssigntextnonmutable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleGVisitor ) return ((SimpleGVisitor<? extends T>)visitor).visitAssigntextnonmutable(this);
			else return visitor.visitChildren(this);
		}
	}
